...
        android:layout_height="50dp"
        android:text="Sign Out"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/AddRat"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Add Rat"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

...
